hphp/hack/test/typecheck/dynamic/mixed_isnt_dynamic/in_vec.php
<?hh

function foo(vec<dynamic> $x): vec<mixed> {
  return $x;
}

function bar(vec<mixed> $x): vec<dynamic> {
  return $x;
}
